--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ p{
   color: #fdfeff;
   font-size: 20px;
   font-weight: 500;
+  border-radius: 8px;
 }
 hr{
   border: 1px solid grey;
@@ -47,7 +48,9 @@ hr{
   color: #12b075;
   background-color: #232f40;
 }
-
+.placeholder{
+  opacity: 0.7;
+}
 button{
   font-family: "Poppins",sans-serif;
   font-weight: 500;
